Fix mobile menu resize issue, and background overlay on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -5,16 +5,19 @@
     }
     .admin-bar.mean-container #menu-product-menu {
         top: 88px;
-        height: calc(100vh - 88px) !important;
     }
     .admin-bar .mean-container .mean-bar .meanclose {
         top: 88px;
+    }
+    .mean-container.mean-lock {
+        overflow: hidden;
     }
     .mean-container #menu-product-menu {
         position: fixed;
         max-width: 90%;
         width: 300px;
         left: 0;
+        bottom: 0;
         background: #fff;
         display: block;
         margin: 0;
@@ -24,7 +27,11 @@
         overflow: auto;
         line-height: 1.7;
         top: 56px;
-        height: calc(100vh - 56px) !important;
+        /* box-shadow: 14px 0 18px -18px #bbb; */
+    }
+    .mean-container .mean-bar .meanmenu-reveal {
+        background: rgba(0, 0, 0, 0);
+        transition: 0.3s background .2s;
     }
     .mean-container .mean-bar .meanmenu-reveal.meanclose {
         top: 56px;
@@ -34,6 +41,7 @@
         bottom: 0;
         display: block;
         z-index: 3;
+        background: rgba(0, 0, 0, .3);
     }
     .mean-container #menu-product-menu .menu-item {
         display: flex;
@@ -172,7 +180,6 @@
 @media (max-width: 782px) {
     .admin-bar.mean-container #menu-product-menu {
         top: 101px;
-        height: calc(100vh - 101px) !important;
     }
     .admin-bar #header-wrapper {
         top: 46px;
@@ -194,6 +201,5 @@
     }
     .admin-bar.mean-container #menu-product-menu {
         top: 56px;
-        height: calc(100vh - 56px) !important;
     }
 }
